[package]
name = "gradient-string"
version = "0.1.0"
edition = "2024"
description = "gradient-string is a safe crate to iterate over a gradient of permutations of string slices"
documentation = "https://docs.rs/gradient-string"
readme = "README.md"
repository = "https://github.com/gabrielfalcao/gradient-string"
homepage = "https://docs.rs/gradient-string"
license = "MIT"
keywords = ["rust", "memory", "library"]
authors = ["Gabriel DeMoura <gabrielteratos@gmail.com>"]
categories = ["algorithms"]


[lib]
name = "gradient_string"
path = "src/lib.rs"

[dependencies]
gradient-slice = "0.2.1"
